<!--Name: Melvin Carl Pote-->
<!--Student ID: N01483399-->
<!--Section A-->
<resources>
    <string name="app_name">MelvinLayout8</string>
    <string name="home_menu_button">Home</string>
    <string name="melvinmenu">Melvin</string>
    <string name="nameText">Melvin Carl Pote (N01483399)</string>
    <string name="save_courses_button">Save Courses</string>
    <string name="save_file_button">Save File</string>
    <string name="web_data">Web Data</string>
    <string name="fullName"> Melvin Carl Pote </string>
    <string name="studentID">N01483399</string>
    <string name="programmingLanguages">C, JavaScript, Python</string>
    <string name = "languages">English, Tagalog</string>
    <string name="error1">ERROR</string>
    <string name="error2">ERROR</string>
    <string name="map_title">Map</string>
    <string name="no_data">NO DATA</string>
    <string name="read_courses_button">Read Courses</string>
    <string name="read_file_button">Read File</string>
    <string name="no_data_courses">NO DATA Courses</string>
    <string name="no_data_file">NO DATA File</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="courses">
        <item>Programming Fundamentals</item>
        <item>Electric Circuits</item>
        <item>Digital Fundamentals</item>
        <item>Technical Mathematics</item>
        <item>Technical Reading and Writing Skills</item>
        <item>Computer Hardware and Operating Systems</item>
    </string-array>
    <string-array name="courseArray">Course Array</string-array>
</resources>