<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDD66D"
    tools:context=".PoteActivity">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/secondFragment"
        android:layout_width="280dp"
        android:layout_height="64dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="147dp"
        android:text="@string/no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/readCButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="183dp"
        android:layout_marginEnd="132dp"
        android:backgroundTint="#00008B"
        android:text="@string/read_courses_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/readFButton"
        android:layout_width="400dp"
        android:layout_height="59dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="#E53935"
        android:text="@string/read_file_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>